--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -10,12 +10,16 @@
 
     <body>
         <!-- Calls PrintText() from main.js-->
-        <button onclick="PrintText()">Click here</button>
+        <button onclick="PrintText()">Click here!</button>
 
         <p id="demo"></p>
 
         <!-- Calls Concatinate() from main.js-->
-        <p id="concatenate" onclick="Concatenate()">Click Here</p>
+        <p id="concatenate" onclick="Concatenate()">Click here!</p>
+
+        <p id="sum">3+6=</p>
+        <button onclick="Sum(3, 6)">Click here!</button>
+
     </body>
 
 
