--- a/Project4_dictionaries/Index.html
+++ b/Project4_dictionaries/Index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello World</title>
+
+        <title>Dictionaries</title>
 
         <script src="./JS/main.js"></script>
     </head>
     <body>
+        <p id="dictionary" onclick="MyDictionary()">Click Here!</p>
 
+        <p id="Identical-keys" onclick="TwoIdenticalKeys()">Click Here!</p>
     </body>
 </html>
